# backend/docs/swagger.json
@@ -708,7 +708,7 @@
                 },
                 "model": {
                     "type": "string",
-                    "example": "grok-imagine-image-edit"
+                    "example": "grok-imagine-image-2.0-web"
                 },
                 "n": {
                     "type": "integer",
@@ -846,9 +846,17 @@
         "httpserver.SwaggerVideoAudioInput": {
             "type": "object",
             "properties": {
-                "voice_id": {
+                "data": {
                     "type": "string",
-                    "example": "eve"
+                    "example": "SUQzBAAAAAAA..."
+                },
+                "format": {
+                    "type": "string",
+                    "example": "mp3"
+                },
+                "url": {
+                    "type": "string",
+                    "example": "https://example.com/reference.mp3"
                 }
             }
         },
@@ -868,7 +876,7 @@
                 },
                 "model": {
                     "type": "string",
-                    "example": "grok-imagine-video"
+                    "example": "grok-imagine-video-1.5"
                 },
                 "prompt": {
                     "type": "string",
@@ -892,6 +900,10 @@
                 },
                 "video": {
                     "$ref": "#/definitions/httpserver.SwaggerVideoMediaInput"
+                },
+                "video_extension_start_time": {
+                    "type": "number",
+                    "example": 6.041667
                 }
             }
         },
